# ZalithLauncher

./: README.md  settings.gradle.kts
.github/workflows/: android.yml
ZalithLauncher/: build.gradle.kts  gradle.properties
ZalithLauncher/src/main/: AndroidManifest.xml
ZalithLauncher/src/main/assets/components/lwjgl3/: version
ZalithLauncher/src/main/cmake/distant_horizons_zstd/: CMakeLists.txt  distant_horizons_zstd_wrapper.c
ZalithLauncher/src/main/java/com/movtery/zalithlauncher/feature/graphics/: GameGraphicsApiHelper.kt
ZalithLauncher/src/main/java/com/movtery/zalithlauncher/launch/: LaunchArgs.kt  LaunchGame.kt
ZalithLauncher/src/main/java/com/movtery/zalithlauncher/mods/: DistantHorizonsSupport.kt
ZalithLauncher/src/main/java/com/movtery/zalithlauncher/renderer/: Renderers.kt
ZalithLauncher/src/main/java/com/movtery/zalithlauncher/setting/: AllSettings.kt
ZalithLauncher/src/main/java/net/kdt/pojavlaunch/: JavaGUILauncherActivity.java  MainActivity.java  MinecraftGLSurface.java
ZalithLauncher/src/main/java/net/kdt/pojavlaunch/multirt/: MultiRTUtils.java  RTRecyclerViewAdapter.java  Runtime.java
ZalithLauncher/src/main/java/net/kdt/pojavlaunch/utils/: JREUtils.java
ZalithLauncher/src/main/jni/: Android.mk  egl_bridge.c
ZalithLauncher/src/main/jni/eglwrap/: egl_wrapper.c  egl_wrapper.h
ZalithLauncher/src/main/res/layout/: settings_fragment_game.xml  settings_fragment_video.xml  view_floating_logger.xml
ZalithLauncher/src/main/res/values/: headings_array.xml  strings.xml
jre_lwjgl3glfw/src/main/java/org/lwjgl/glfw/: GLFW.java
(+6 files in other folders)
